--- a/bird6.conf
+++ b/bird6.conf
@@ -1,8 +1,8 @@
-router id 10.130.14.1;
-
 table peering;
 table freifunk; # RIP, mesh, kernel
 table internal; # used for table 42
+
+include "bird6_local.conf";
 
 protocol device {
 	scan time 10;
@@ -27,38 +27,15 @@ function is_freifunk() {
 	return (net ~ [2001:bf7::/32+]);
 }
 
-function is_self_net() {
-	return (net ~ [fdef:ffc0:3dd7::/48+, 2001:bf7:110::/44+]);
-}
-
 function is_self() {
 	return (proto = "static_mesh");
 }
 
 filter kernel_export_filter {
-	if ! is_ula() then reject;
-	krt_prefsrc = fdef:ffc0:3dd7::e01;
+	if ! (is_ula() || is_freifunk()) then reject;
+	if is_ula() then krt_prefsrc = ULA_IP;
+	if is_freifunk() then krt_prefsrc = PUBLIC_IP;
 	accept;
-}
-
-# static routes
-################
-
-protocol static static_mesh {
-	table freifunk;
-        route fdef:ffc0:3dd7::/48 reject;
-        route 2001:bf7:110::/44 reject;
-}
-
-protocol static local_mesh {
-	table freifunk;
-	route fdef:ffc0:3dd7::/64 via "freifunk";
-	route 2001:bf7:110::/64 via "freifunk";
-}
-
-protocol static local_clientvpn {
-	table freifunk;
-	route fdef:ffc0:3dd7:10::/64 via "freifunk-client";
 }
 
 # Kernel routing tables
@@ -89,7 +66,7 @@ protocol kernel kernel_mesh {
 
 protocol pipe pipe_freifunk {
 	peer table freifunk;
-	import where is_ula();
+	import where is_ula() || is_freifunk();
 	export none;
 }
 
@@ -112,8 +89,7 @@ protocol pipe pipe_bgp_freifunk {
 
 template bgp bgp_ibgp {
 	table peering;
-	local as 65052;
-	source address fdef:ffc0:3dd7::c01;
+	local as OWNAS;
 	import all;
 	preference 0;
 	export where source = RTS_BGP;
@@ -129,16 +105,14 @@ include "bird6_ibgp.conf";
 
 template bgp bgp_icvpn {
 	table peering;
-        local as 65052;
-	source address fec0::a:cf:0:83;
+        local as OWNAS;
         import where (is_ula() || is_freifunk());
         export where (is_self()) || (source = RTS_BGP);
 }
 
 template bgp bgp_icvpn_public {
 	table peering;
-        local as 65052;
-	source address fec0::a:cf:0:83;
+        local as OWNAS;
         import where (is_ula() || is_global() || is_default());
         export where (is_self()) || (source = RTS_BGP);
 }
@@ -151,9 +125,9 @@ include "bird6_icvpn.conf";
 
 template bgp bgp_dn42 {
 	table peering;
-	local as 65052;
+	local as OWNAS;
 	import where is_ula();
-	export where (source = RTS_BGP || is_self());
+	export where (is_self() || source = RTS_BGP);
 }
 
 include "bird6_dn42.conf";
@@ -165,8 +139,6 @@ protocol rip rip_mesh {
 	table freifunk;
 	preference 10;
 	export all;
-	import where is_ula();
-
+	import where is_ula() || is_self_net();
 	interface "freifunk";
 }
-
