--- a/bird6_dn42.conf
+++ b/bird6_dn42.conf
@@ -1,11 +1,10 @@
 protocol bgp bgp_dn42_chaos from bgp_dn42 {
-	source address fe80::ac16:fd92;
-	neighbor fe80::ac16:fd91%dn42_chaos as 64784;
+	source address fe80::ac16:fd8c;
+	neighbor fe80::ac16:fd8b%dn42_chaos as 64784;
 }
 
 protocol bgp bgp_dn42_mneme from bgp_dn42 {
-        source address fe80::2;
-        neighbor fe80::1%dn42_tcatm as 76112;
+        neighbor 2a01:4f8:151:13c3:5054:ff:feff:cbce as 76112;
 }
 
 protocol bgp bgp_dn42_fritz from bgp_dn42 {
@@ -13,3 +12,7 @@ protocol bgp bgp_dn42_fritz from bgp_dn42 {
         neighbor fdef:ffc0:3dd7::27 as 76129;
 }
 
+protocol bgp bgp_dn42_draic from bgp_dn42 {
+	neighbor 2001:bf7:110:0:fa1a:67ff:fea5:f2c7 as 76112;
+	import where is_ula() || (net ~ [2001:4dd0:fb22:200::/56]);
+}
