--- a/bird6_ibgp.conf
+++ b/bird6_ibgp.conf
@@ -1,11 +1,11 @@
 protocol bgp bgp_ibgp_huextertor from bgp_ibgp {
-        neighbor fdef:ffc0:3dd7::801 as 65052;
+        neighbor fdef:ffc0:3dd7::801 as OWNAS;
 }
 
 protocol bgp bgp_ibgp_muehlentor from bgp_ibgp {
-        neighbor fdef:ffc0:3dd7::a01 as 65052;
+        neighbor fdef:ffc0:3dd7::a01 as OWNAS;
 }
 
 protocol bgp bgp_ibgp_holstentor from bgp_ibgp {
-        neighbor fdef:ffc0:3dd7::c01 as 65052;
+        neighbor fdef:ffc0:3dd7::c01 as OWNAS;
 }
