kernel table using define

--- a/bird6.conf
+++ b/bird6.conf
@@ -58,7 +58,7 @@ protocol kernel kernel_mesh {
 	import none;
 	export all;
 	device routes;
-	kernel table 42;
+	kernel table KERNEL_TABLE;
 }
 
 # plumbing
