--- a/bird6_local.conf
+++ b/bird6_local.conf
@@ -3,6 +3,7 @@ router id 10.130.14.1;
 define OWNAS = 65052;
 define ULA_IP = fdef:ffc0:3dd7::e01;
 define PUBLIC_IP = 2001:bf7:110::e01;
+define KERNEL_TABLE = 42;
 
 function is_self_net() {
 	return (net ~ [fdef:ffc0:3dd7::/48+, 2001:bf7:110::/44+]);
