--- a/bird6.conf
+++ b/bird6.conf
@@ -1,8 +1,5 @@
 table peering;
-table freifunk; # RIP, mesh, kernel
-table internal; # used for table 42
-
-include "bird6_local.conf";
+table kernelcopy;
 
 protocol device {
 	scan time 10;
@@ -31,6 +28,14 @@ function is_self() {
 	return (proto = "static_mesh");
 }
 
+# local configuration
+######################
+
+include "bird6_local.conf";
+
+# Kernel routing tables
+########################
+
 filter kernel_export_filter {
 	if ! (is_ula() || is_freifunk()) then reject;
 	if is_ula() then krt_prefsrc = ULA_IP;
@@ -38,50 +43,35 @@ filter kernel_export_filter {
 	accept;
 }
 
-# Kernel routing tables
-########################
-
-# Export ULA routes from table freifunk to the kernel's master table.
-
-protocol kernel kernel_master {
-	table freifunk;
+protocol kernel {
 	scan time 20;
+	device routes;
 	import none;
 	export filter kernel_export_filter;
 }
 
-# Export all routes from table freifunk to the kernel's freifunk table.
-
-protocol kernel kernel_mesh {
-	table internal;
+protocol kernel {
+	table kernelcopy;
+	kernel table KERNEL_TABLE;
 	scan time 20;
+	device routes;
 	import none;
 	export all;
-	device routes;
-	kernel table KERNEL_TABLE;
 }
 
 # plumbing
 ###########
 
-protocol pipe pipe_freifunk {
-	peer table freifunk;
-	import where is_ula() || is_freifunk();
-	export none;
-}
-
-protocol pipe pipe_freifunk_mesh {
-	table freifunk;
-	peer table internal;
+protocol pipe {
+	peer table kernelcopy;
 	import none;
 	export all;
 }
 
-protocol pipe pipe_bgp_freifunk {
-	table peering;
-	peer table freifunk;
-	export all;
-	import where is_self_net();
+protocol pipe {
+	peer table peering;
+	import all;
+	export where is_self_net();
 }
 
 # Mesh-internal BGP between all gateways
@@ -90,12 +80,12 @@ protocol pipe pipe_bgp_freifunk {
 template bgp bgp_ibgp {
 	table peering;
 	local as OWNAS;
-	import all;
 	preference 0;
-	export where source = RTS_BGP;
 	direct;
 	gateway direct;
 	next hop self;
+	import all;
+	export where source = RTS_BGP;
 }
 
 include "bird6_ibgp.conf";
@@ -117,26 +107,12 @@ template bgp bgp_icvpn_public {
         export where (is_self()) || (source = RTS_BGP);
 }
 
-
 include "bird6_icvpn.conf";
-
-# DN42 peerings
-################
-
-template bgp bgp_dn42 {
-	table peering;
-	local as OWNAS;
-	import where is_ula();
-	export where (is_self() || source = RTS_BGP);
-}
-
-include "bird6_dn42.conf";
 
 # Mesh-internal routing
 ########################
 
 protocol rip rip_mesh {
-	table freifunk;
 	preference 10;
 	export all;
 	import where is_ula() || is_self_net();
