--- a/bird6_local.conf
+++ b/bird6_local.conf
@@ -13,19 +13,16 @@ function is_self_net() {
 ################
 
 protocol static static_mesh {
-	table freifunk;
         route fdef:ffc0:3dd7::/48 reject;
         route 2001:bf7:110::/44 reject;
 }
 
 protocol static local_mesh {
-	table freifunk;
 	route fdef:ffc0:3dd7::/64 via "freifunk";
 	route 2001:bf7:110::/64 via "freifunk";
 }
 
 protocol static local_clientvpn {
-	table freifunk;
 	route fdef:ffc0:3dd7:10::/64 via "freifunk-client";
 	route 2001:bf7:110:10::/64 via "freifunk-client";
 }
@@ -34,7 +31,6 @@ protocol static local_clientvpn {
 ######################
 
 protocol ospf OSPF {
-	table freifunk;
 	rfc1583compat yes;
 	export all;
 	import none;
@@ -45,3 +41,15 @@ protocol ospf OSPF {
 		};
 	};
 };
+
+# DN42 peerings
+################
+
+template bgp bgp_dn42 {
+	table peering;
+	local as OWNAS;
+	import where is_ula();
+	export where (is_self() || source = RTS_BGP);
+}
+
+include "bird6_dn42.conf";
