--- a/bird6.conf
+++ b/bird6.conf
@@ -8,25 +8,11 @@ protocol device {
 # filter helpers
 #################
 
-function is_default() {
-	return net ~ [ ::0/0 ];
-}
-
-function is_ula() {
-	return (net ~ [fc00::/7{48,64}]);
-}
-
-function is_global() {
-	return (net ~ [2000::/3+]);
-}
-
-function is_freifunk() {
-	return (net ~ [2001:bf7::/32+]);
-}
-
-function is_self() {
-	return (proto = "static_mesh");
-}
+function is_self()     { return proto = "static_mesh"; }
+function is_default()  { return net ~ [::0/0          ]; }
+function is_global()   { return net ~ [2000::/3+      ]; }
+function is_ula()      { return net ~ [fc00::/7{48,64}]; }
+function is_freifunk() { return net ~ [2001:bf7::/32+ ]; }
 
 # local configuration
 ######################
@@ -37,7 +23,7 @@ include "bird6_local.conf";
 ########################
 
 filter kernel_export_filter {
-	if ! (is_ula() || is_freifunk()) then reject;
+	if !(is_ula() || is_freifunk()) then reject;
 	if is_ula() then krt_prefsrc = ULA_IP;
 	if is_freifunk() then krt_prefsrc = PUBLIC_IP;
 	accept;
@@ -95,16 +81,16 @@ include "bird6_ibgp.conf";
 
 template bgp bgp_icvpn {
 	table peering;
-        local as OWNAS;
-        import where (is_ula() || is_freifunk());
-        export where (is_self()) || (source = RTS_BGP);
+	local as OWNAS;
+	import where (is_ula() || is_freifunk());
+	export where (is_self()) || (source = RTS_BGP);
 }
 
 template bgp bgp_icvpn_public {
 	table peering;
-        local as OWNAS;
-        import where (is_ula() || is_global() || is_default());
-        export where (is_self()) || (source = RTS_BGP);
+	local as OWNAS;
+	import where (is_ula() || is_global() || is_default());
+	export where (is_self()) || (source = RTS_BGP);
 }
 
 include "bird6_icvpn.conf";
