simplify peering filters

--- a/bird6.conf
+++ b/bird6.conf
@@ -57,7 +57,7 @@ protocol pipe {
 protocol pipe {
 	peer table peering;
 	import all;
-	export where is_self_net();
+	export where is_self();
 }
 
 # Mesh-internal BGP between all gateways
@@ -82,15 +82,15 @@ include "bird6_ibgp.conf";
 template bgp bgp_icvpn {
 	table peering;
 	local as OWNAS;
-	import where (is_ula() || is_freifunk());
-	export where (is_self()) || (source = RTS_BGP);
+	import where is_ula() || is_freifunk();
+	export where !is_default();
 }
 
 template bgp bgp_icvpn_public {
 	table peering;
 	local as OWNAS;
-	import where (is_ula() || is_global() || is_default());
-	export where (is_self()) || (source = RTS_BGP);
+	import all;
+	export all;
 }
 
 include "bird6_icvpn.conf";
