do not export default to dn42

--- a/bird6_local.conf
+++ b/bird6_local.conf
@@ -49,7 +49,7 @@ template bgp bgp_dn42 {
 	table peering;
 	local as OWNAS;
 	import where is_ula();
-	export where (is_self() || source = RTS_BGP);
+	export where !is_default();
 }
 
 include "bird6_dn42.conf";
