do not redistribute default route

--- a/bird6.conf
+++ b/bird6.conf
@@ -90,7 +90,7 @@ template bgp bgp_icvpn_public {
 	table peering;
 	local as OWNAS;
 	import all;
-	export all;
+	export where !is_default();
 }
 
 include "bird6_icvpn.conf";
