--- a/bird6_local.conf
+++ b/bird6_local.conf
@@ -6,7 +6,7 @@ define PUBLIC_IP = 2001:bf7:110::e01;
 define KERNEL_TABLE = 42;
 
 function is_self_net() {
-	return (net ~ [fdef:ffc0:3dd7::/48+, 2001:bf7:110::/44+]);
+	return net ~ [fdef:ffc0:3dd7::/48+, 2001:bf7:110::/44+];
 }
 
 # static routes
