simplify kernel export filter

--- a/bird6.conf
+++ b/bird6.conf
@@ -22,18 +22,15 @@ include "bird6_local.conf";
 # Kernel routing tables
 ########################
 
-filter kernel_export_filter {
-	if !(is_ula() || is_freifunk()) then reject;
-	if is_ula() then krt_prefsrc = ULA_IP;
-	if is_freifunk() then krt_prefsrc = PUBLIC_IP;
-	accept;
-}
-
 protocol kernel {
 	scan time 20;
 	device routes;
 	import none;
-	export filter kernel_export_filter;
+	export filter {
+		if is_ula()      then { krt_prefsrc = ULA_IP;    accept; }
+		if is_freifunk() then { krt_prefsrc = PUBLIC_IP; accept; }
+		reject;
+	};
 }
 
 protocol kernel {
