only accept internal routes from rip

--- a/bird6.conf
+++ b/bird6.conf
@@ -98,6 +98,6 @@ include "bird6_icvpn.conf";
 protocol rip rip_mesh {
 	preference 10;
 	export all;
-	import where is_ula() || is_self_net();
+	import where is_self_net();
 	interface "freifunk";
 }
