never import self_net from bgp

--- a/bird6.conf
+++ b/bird6.conf
@@ -79,14 +79,14 @@ include "bird6_ibgp.conf";
 template bgp bgp_icvpn {
 	table peering;
 	local as OWNAS;
-	import where is_ula() || is_freifunk();
+	import where (is_ula() || is_freifunk()) && !is_self_net();
 	export where !is_default();
 }
 
 template bgp bgp_icvpn_public {
 	table peering;
 	local as OWNAS;
-	import all;
+	import where !is_self_net();
 	export where !is_default();
 }
 
