--- a/bird6_local.conf
+++ b/bird6_local.conf
@@ -48,7 +48,7 @@ protocol ospf OSPF {
 template bgp bgp_dn42 {
 	table peering;
 	local as OWNAS;
-	import where is_ula();
+	import where is_ula() && !is_self_net();
 	export where !is_default();
 }
 
