--- a/bird6.conf
+++ b/bird6.conf
@@ -8,8 +8,7 @@ protocol device {
 # filter helpers
 #################
 
-function is_self()     { return proto = "static_mesh"; }
-function is_default()  { return net ~ [::0/0          ]; }
+function is_default()  { return net ~ [::/0           ]; }
 function is_global()   { return net ~ [2000::/3+      ]; }
 function is_ula()      { return net ~ [fc00::/7{48,64}]; }
 function is_freifunk() { return net ~ [2001:bf7::/32+ ]; }
@@ -54,7 +53,7 @@ protocol pipe {
 protocol pipe {
 	peer table peering;
 	import all;
-	export where is_self();
+	export where proto = "static_mesh";
 }
 
 # Mesh-internal BGP between all gateways
