move rip to _local

--- a/bird6_local.conf
+++ b/bird6_local.conf
@@ -9,9 +9,6 @@ function is_self_net() {
 	return net ~ [fdef:ffc0:3dd7::/48+, 2001:bf7:110::/44+];
 }
 
-# static routes
-################
-
 protocol static static_mesh {
 	route fdef:ffc0:3dd7::/48 reject;
 	route 2001:bf7:110::/44 reject;
@@ -22,13 +19,23 @@ protocol static local_mesh {
 	route 2001:bf7:110::/64 via "freifunk";
 }
 
-protocol static local_clientvpn {
-	route fdef:ffc0:3dd7:10::/64 via "freifunk-client";
-	route 2001:bf7:110:10::/64 via "freifunk-client";
+# Mesh-internal routing
+########################
+
+protocol rip rip_mesh {
+	preference 10;
+	export all;
+	import where is_self_net();
+	interface "freifunk";
 }
 
 # Freifunk-Client-VPN
 ######################
+
+protocol static local_clientvpn {
+	route fdef:ffc0:3dd7:10::/64 via "freifunk-client";
+	route 2001:bf7:110:10::/64 via "freifunk-client";
+}
 
 protocol ospf OSPF {
 	rfc1583compat yes;
