--- a/bird6_local.conf
+++ b/bird6_local.conf
@@ -25,7 +25,7 @@ protocol static local_mesh {
 protocol rip rip_mesh {
 	preference 10;
 	export all;
-	import where is_self_net();
+	import where is_ula() || is_freifunk() || is_self_net();
 	interface "freifunk";
 }
 
