add static_mesh to table peering

--- a/bird.conf
+++ b/bird.conf
@@ -58,7 +58,7 @@ protocol pipe {
 protocol pipe {
 	peer table peering;
 	import all;
-	export where proto = "static_mesh";
+	export none;
 }
 
 # static routes
