--- a/bird6_local.conf
+++ b/bird6_local.conf
@@ -10,6 +10,7 @@ function is_self_net() {
 }
 
 protocol static static_mesh {
+	table peering;
 	route fdef:ffc0:3dd7::/48 reject;
 	route 2001:bf7:110::/44 reject;
 }
