--- a/bird6.conf
+++ b/bird6.conf
@@ -53,7 +53,7 @@ protocol pipe {
 protocol pipe {
 	peer table peering;
 	import all;
-	export where proto = "static_mesh";
+	export none;
 }
 
 # Mesh-internal BGP between all gateways
