--- a/bird_local.conf
+++ b/bird_local.conf
@@ -20,7 +20,7 @@ protocol static local_mesh {
 # Mesh-internal routing
 ########################
 
-protocol rip rip_ffhl {
+protocol rip rip_mesh {
 	preference 10;
 	export where !is_default();
 	import where is_freifunk() || is_dn42() || is_freifunk();
