bird6: unreachable default route with low preference

--- a/bird6.conf
+++ b/bird6.conf
@@ -56,6 +56,15 @@ protocol pipe {
 	export none;
 }
 
+# static routes
+################
+
+protocol static unreachable_default {
+	preference 0;
+	route ::/0 reject;
+}
+
+
 # Mesh-internal BGP between all gateways
 #########################################
 
