prevent iBGP routes from being exported through RIP

--- a/bird6.conf
+++ b/bird6.conf
@@ -64,7 +64,6 @@ protocol static unreachable_default {
 	route ::/0 reject;
 }
 
-
 # Mesh-internal BGP between all gateways
 #########################################
 
@@ -75,7 +74,10 @@ template bgp bgp_ibgp {
 	gateway direct;
 	next hop self;
 	import all;
-	export where source = RTS_BGP;
+	export filter { bgp_community.add((OWNAS, 1));
+		        if source = RTS_BGP then accept;
+		        reject;
+	              };
 }
 
 include "bird6_ibgp.conf";
