--- a/bird6_local.conf
+++ b/bird6_local.conf
@@ -26,8 +26,8 @@ protocol static local_mesh {
 protocol rip rip_mesh {
 	interface "freifunk";
 	preference 10;
-	import where is_ula() || is_freifunk() || is_self_net();
-	export all;
+	import where is_self_net();
+        export where !((OWNAS, 1) ~ bgp_community);
 }
 
 # Freifunk-Client-VPN
