v4: prevent iBGP -> RIP

--- a/bird.conf
+++ b/bird.conf
@@ -91,7 +91,10 @@ template bgp bgp_icvpn {
 	table peering;
 	local as OWNAS;
 	import where (is_freifunk() || is_dn42() || is_chaosvpn()) && !is_self_net();
-	export all;
+	export filter { bgp_community.add((OWNAS, 1));
+		        if source = RTS_BGP then accept;
+		        reject;
+	              };
 };
 
 include "bird_icvpn.conf";
