--- a/bird_local.conf
+++ b/bird_local.conf
@@ -24,7 +24,7 @@ protocol rip rip_mesh {
 	interface "freifunk";
 	preference 10;
 	import where is_freifunk() || is_dn42() || is_freifunk();
-	export where !is_default();
+	export where !is_default() && !((OWNAS, 1) ~ bgp_community);
 };
 
 # Freifunk-Client-VPN
