--- a/bird6_ibgp.conf
+++ b/bird6_ibgp.conf
@@ -9,3 +9,7 @@ protocol bgp bgp_ibgp_muehlentor from bgp_ibgp {
 protocol bgp bgp_ibgp_holstentor from bgp_ibgp {
 	neighbor fdef:ffc0:3dd7::c01 as OWNAS;
 }
+
+protocol bgp bgp_ibgp_burgtor from bgp_ibgp {
+	neighbor fdef:ffc0:3dd7::e01 as OWNAS;
+}
