--- a/bird_ibgp.conf
+++ b/bird_ibgp.conf
@@ -9,3 +9,7 @@ protocol bgp bgp_ibgp_muehlentor from bgp_ibgp {
 protocol bgp bgp_ibgp_holstentor from bgp_ibgp {
 	neighbor 10.130.12.1 as OWNAS;
 };
+
+protocol bgp bgp_ibgp_burgtor from bgp_ibgp {
+	neighbor 10.130.14.1 as OWNAS;
+};
