fix v4 bgp_community

--- a/bird.conf
+++ b/bird.conf
@@ -79,7 +79,10 @@ template bgp bgp_ibgp {
 	gateway direct;
 	next hop self;
 	import all;
-	export where source = RTS_BGP;
+	export filter { bgp_community.add((OWNAS, 1));
+		              if source = RTS_BGP then accept;
+		              reject;
+	              };
 }
 
 include "bird_ibgp.conf";
@@ -91,10 +94,7 @@ template bgp bgp_icvpn {
 	table peering;
 	local as OWNAS;
 	import where (is_freifunk() || is_dn42() || is_chaosvpn()) && !is_self_net();
-	export filter { bgp_community.add((OWNAS, 1));
-		        if source = RTS_BGP then accept;
-		        reject;
-	              };
+	export all;
 };
 
 include "bird_icvpn.conf";
