v4: fix rip import

--- a/bird_local.conf
+++ b/bird_local.conf
@@ -23,6 +23,6 @@ protocol static local_mesh {
 protocol rip rip_mesh {
 	interface "freifunk";
 	preference 10;
-	import where is_freifunk() || is_dn42() || is_freifunk();
+	import where is_self_net();
 	export where !is_default() && !((OWNAS, 1) ~ bgp_community);
 };
