--- a/bird6_local.conf
+++ b/bird6_local.conf
@@ -1,31 +1,4 @@
 router id 10.130.14.1;
 
-define OWNAS = 65052;
-define ULA_IP = fdef:ffc0:3dd7::e01;
-define PUBLIC_IP = 2001:bf7:110::e01;
-define KERNEL_TABLE = ipt_freifunk;
-
-function is_self_net() {
-	return net ~ [fdef:ffc0:3dd7::/48+, 2001:bf7:110::/44+];
-}
-
-protocol static static_mesh {
-	table peering;
-	route fdef:ffc0:3dd7::/48 reject;
-	route 2001:bf7:110::/44 reject;
-}
-
-protocol static local_mesh {
-	route fdef:ffc0:3dd7::/64 via "freifunk";
-	route 2001:bf7:110::/64 via "freifunk";
-}
-
-# Mesh-internal routing
-########################
-
-protocol rip rip_mesh {
-	interface "freifunk";
-	preference 10;
-	import where is_self_net();
-        export where !((OWNAS, 1) ~ bgp_community);
-}
+define ULA_IP    = fdef:ffc0:3dd7::e01;
+define PUBLIC_IP = 2001:67c:2d50::e01;
