v6: use public IPs for iBGP

--- a/bird6_ibgp.conf
+++ b/bird6_ibgp.conf
@@ -1,15 +1,15 @@
 protocol bgp bgp_ibgp_huextertor from bgp_ibgp {
-  neighbor fdef:ffc0:3dd7::801 as OWNAS;
+  neighbor 2001:67c:2d50::801 as OWNAS;
 }
 
 protocol bgp bgp_ibgp_muehlentor from bgp_ibgp {
-  neighbor fdef:ffc0:3dd7::a01 as OWNAS;
+  neighbor 2001:67c:2d50::a01 as OWNAS;
 }
 
 protocol bgp bgp_ibgp_holstentor from bgp_ibgp {
-  neighbor fdef:ffc0:3dd7::c01 as OWNAS;
+  neighbor 2001:67c:2d50::c01 as OWNAS;
 }
 
 protocol bgp bgp_ibgp_burgtor from bgp_ibgp {
-  neighbor fdef:ffc0:3dd7::e01 as OWNAS;
+  neighbor 2001:67c:2d50::e01 as OWNAS;
 }
