add host specific configuration

--- a/bird6.conf
+++ b/bird6.conf
@@ -5,6 +5,11 @@ protocol device {
   scan time 10;
 }
 
+# host configuration
+#####################
+
+include "bird6_host.conf";
+
 # constants
 ############
 
@@ -28,11 +33,6 @@ function is_self_mesh()   { return net ~ [ fdef:ffc0:3dd7::/64+
                                          , 2001:bf7:110::/64+
                                          , 2001:67c:2d50::/64+
                                          ]; }
-
-# local configuration
-######################
-
-include "bird6_local.conf";
 
 # static routes
 ################
@@ -123,8 +123,6 @@ template bgp bgp_ibgp {
                 };
 }
 
-include "bird6_ibgp.conf";
-
 # InterCity VPN peerings
 #########################
 
@@ -136,8 +134,6 @@ template bgp bgp_icvpn {
   export where is_freifunk() || is_ula() || is_self_net();
 }
 
-include "bird6_icvpn.conf";
-
 # public IPv6
 ##############
 
@@ -148,5 +144,3 @@ template bgp bgp_public {
   export where is_self_public();
   next hop self;
 }
-
-include "bird6_bgp.conf";
