--- a/bird.conf
+++ b/bird.conf
@@ -1,4 +1,5 @@
 table peering;
+table peering_ffrhein;
 table kernelcopy;
 
 protocol device {
@@ -39,7 +40,7 @@ protocol kernel {
 	device routes;
 	import none;
 	export filter {
-		if is_default()  then accept;
+		if is_default()  then { krt_prefsrc = OWNIP_PUBLIC; accept; }
 		if is_dn42()     then { krt_prefsrc = OWNIP; accept ; }
 		if is_freifunk() then { krt_prefsrc = OWNIP; accept ; }
 		reject;
@@ -57,6 +58,12 @@ protocol pipe {
 
 protocol pipe {
 	peer table peering;
+	import all;
+	export none;
+}
+
+protocol pipe {
+	peer table peering_ffrhein;
 	import all;
 	export none;
 }
@@ -98,3 +105,16 @@ template bgp bgp_icvpn {
 };
 
 include "bird_icvpn.conf";
+
+# ffrheinland ipv4
+###################
+
+template bgp bgp_ffrhein {
+	table peering_ffrhein;
+	local as 201173;
+	import all;
+	export where net ~ [185.66.193.32/29+];
+	next hop self;
+}
+
+include "bird_bgp.conf";
