bird.conf: local -> host

--- a/bird.conf
+++ b/bird.conf
@@ -6,6 +6,11 @@ protocol device {
 	scan time 10;
 }
 
+# host configuration
+#####################
+
+include "bird_host.conf";
+
 # filter helpers
 #################
 
@@ -13,11 +18,6 @@ function is_default()  { return net ~ [0.0.0.0/0     ]; }
 function is_freifunk() { return net ~ [10.0.0.0/8+   ]; }
 function is_dn42()     { return net ~ [172.22.0.0/15+]; }
 function is_chaosvpn() { return net ~ [172.31.0.0/16+]; }
-
-# local configuration
-######################
-
-include "bird_local.conf";
 
 # Kernel routing tables
 ########################
