--- a/bird.conf
+++ b/bird.conf
@@ -11,13 +11,44 @@ protocol device {
 
 include "bird_host.conf";
 
+# constants
+############
+
+define OWNAS = 65052;
+define KERNEL_TABLE = ipt_freifunk;
+
 # filter helpers
 #################
 
-function is_default()  { return net ~ [0.0.0.0/0     ]; }
-function is_freifunk() { return net ~ [10.0.0.0/8+   ]; }
-function is_dn42()     { return net ~ [172.22.0.0/15+]; }
-function is_chaosvpn() { return net ~ [172.31.0.0/16+]; }
+function is_default()        { return net ~ [ 0.0.0.0/0       ]; }
+function is_freifunk()       { return net ~ [ 10.0.0.0/8+     ]; }
+function is_dn42()           { return net ~ [ 172.22.0.0/15+  ]; }
+function is_chaosvpn()       { return net ~ [ 172.31.0.0/16+  ]; }
+function is_self_net()       { return net ~ [ 10.130.0.0/16+  ]; }
+function is_self_mesh()      { return net ~ [ 10.130.0.0/20+  ]; }
+function is_self_clientvpn() { return net ~ [ 10.130.16.0/24+ ]; }
+
+# static routes
+################
+
+protocol static static_mesh {
+	table peering;
+	route 10.130.0.0/16 reject;
+};
+
+protocol static local_mesh {
+	route 10.130.0.0/20 via "freifunk-hl";
+};
+
+# Mesh-internal routing
+########################
+
+protocol rip rip_mesh {
+	interface "freifunk";
+	preference 10;
+	import where is_self_net();
+	export where !is_default() && !((OWNAS, 1) ~ bgp_community);
+};
 
 # Kernel routing tables
 ########################
@@ -92,8 +123,6 @@ template bgp bgp_ibgp {
 	              };
 }
 
-include "bird_ibgp.conf";
-
 # InterCity VPN peerings
 #########################
 
@@ -103,8 +132,6 @@ template bgp bgp_icvpn {
 	import where (is_freifunk() || is_dn42() || is_chaosvpn()) && !is_self_net();
 	export all;
 };
-
-include "bird_icvpn.conf";
 
 # ffrheinland ipv4
 ###################
@@ -117,4 +144,4 @@ template bgp bgp_ffrhein {
 	next hop self;
 }
 
-include "bird_bgp.conf";
+include "bird_aux.conf";
