--- a/burgtor/bird6_aux.conf
+++ b/burgtor/bird6_aux.conf
@@ -33,6 +33,9 @@ template bgp bgp_dn42 {
   export where !is_default();
 }
 
+# includes
+###########
+
 include "bird6_ibgp.conf";
 include "bird6_icvpn.conf";
 include "bird6_bgp.conf";
