update ipv6 of draic

--- a/burgtor/bird6_dn42.conf
+++ b/burgtor/bird6_dn42.conf
@@ -13,6 +13,6 @@ protocol bgp bgp_dn42_nbsp_router from bgp_dn42 {
 }
 
 protocol bgp bgp_dn42_draic from bgp_dn42 {
-	neighbor 2001:bf7:110:0:fa1a:67ff:fea5:f2c7 as 76112;
+	neighbor 2001:67c:2d50:0:fa1a:67ff:fea5:f2c7 as 76112;
 	import where is_ula() || (net ~ [2001:4dd0:fb22:200::/56]);
 }
