include ibgp config

--- a/bird.conf
+++ b/bird.conf
@@ -123,6 +123,8 @@ template bgp bgp_ibgp {
 	              };
 }
 
+include "bird_ibgp.conf";
+
 # InterCity VPN peerings
 #########################
 
