--- a/bird6.conf
+++ b/bird6.conf
@@ -123,6 +123,8 @@ template bgp bgp_ibgp {
                 };
 }
 
+include "bird6_ibgp.conf";
+
 # InterCity VPN peerings
 #########################
 
