holstentor: export public ip

--- a/holstentor/bird_aux.conf
+++ b/holstentor/bird_aux.conf
@@ -1,3 +1,11 @@
+# public IPv4
+##############
+
+protocol static local_ip4 {
+	table peering_ffrhein;
+	route 185.66.193.33/32 reject;
+};
+
 # DN42 peerings
 ################
 
