v4: export public IP in bird.conf

--- a/bird.conf
+++ b/bird.conf
@@ -107,6 +107,14 @@ protocol static unreachable_default {
 	route 0.0.0.0/0 reject;
 }
 
+# public IPv4
+##############
+
+protocol static local_ip4 {
+	table peering_ffrhein;
+	route OWNIP_PUBLIC/32 reject;
+};
+
 # Mesh-internal BGP between all gateways
 #########################################
 
