switch nbsp peering to public v6

--- a/holstentor/bird6_dn42.conf
+++ b/holstentor/bird6_dn42.conf
@@ -4,6 +4,6 @@ protocol bgp bgp_dn42_chaos from bgp_dn42 {
 }
 
 protocol bgp bgp_nbsp_router from bgp_dn42 {
-        source address fdef:ffc0:3dd7::c01;
-        neighbor fdef:ffc0:3dd7::2b as 76129;
+  source address 2001:67c:2d50::c01;
+  neighbor 2001:67c:2d50::2b as 76129;
 }
