--- a/burgtor/bird6_dn42.conf
+++ b/burgtor/bird6_dn42.conf
@@ -8,8 +8,8 @@ protocol bgp bgp_dn42_mneme from bgp_dn42 {
 }
 
 protocol bgp bgp_dn42_nbsp_router from bgp_dn42 {
-	source address fdef:ffc0:3dd7::c01;
-	neighbor fdef:ffc0:3dd7::2b as 76129;
+	source address 2001:67c:2d50::e01;
+	neighbor 2001:67c:2d50::2b as 76129;
 }
 
 protocol bgp bgp_dn42_draic from bgp_dn42 {
