rip6: export ULAs

--- a/bird6.conf
+++ b/bird6.conf
@@ -57,8 +57,7 @@ protocol rip rip_mesh {
   interface "freifunk-hl";
   preference 10;
   import where is_self_net();
-  export where is_self_net() || is_default();
-  # previously: !((OWNAS, 1) ~ bgp_community)
+  export where is_self_net() || is_default() || (!((OWNAS, 1) ~ bgp_community) && is_ula());
 }
 
 # Kernel routing tables
