--- a/bird.conf
+++ b/bird.conf
@@ -44,7 +44,7 @@ protocol static local_mesh {
 ########################
 
 protocol rip rip_mesh {
-	interface "freifunk";
+	interface "freifunk-hl";
 	preference 10;
 	import where is_self_net();
 	export where !is_default() && !((OWNAS, 1) ~ bgp_community);
