--- a/bird6.conf
+++ b/bird6.conf
@@ -56,7 +56,7 @@ protocol static local_mesh {
 protocol rip rip_mesh {
   interface "freifunk-hl";
   preference 10;
-  import where is_self_net();
+  import where is_self_net() && (rip_metric < 16);
   export where is_self_net() || is_default() || (!((OWNAS, 1) ~ bgp_community) && is_ula());
 }
 
