--- a/holstentor/bird_aux.conf
+++ b/holstentor/bird_aux.conf
@@ -1,3 +1,10 @@
+# 464XLAT
+##########
+
+protocol static static_464xlat {
+  route 10.130.64.0/18 via "nat64";
+}
+
 # DN42 peerings
 ################
 
