--- a/burgtor/bird6_aux.conf
+++ b/burgtor/bird6_aux.conf
@@ -1,3 +1,10 @@
+# 464XLAT
+##########
+
+protocol static static_464xlat {
+  route 2001:67c:2d50:1::/96 via "nat64";
+}
+
 # Freifunk-Client-VPN
 ######################
 
