remove peering_ffrhein table

--- a/bird.conf
+++ b/bird.conf
@@ -1,5 +1,4 @@
 table peering;
-table peering_ffrhein;
 table kernelcopy;
 
 protocol device {
@@ -96,12 +95,6 @@ protocol pipe {
 	export none;
 }
 
-protocol pipe {
-	peer table peering_ffrhein;
-	import all;
-	export none;
-}
-
 # static routes
 ################
 
@@ -114,7 +107,7 @@ protocol static unreachable_default {
 ##############
 
 protocol static local_ip4 {
-	table peering_ffrhein;
+	table peering;
 	route OWNIP_PUBLIC/32 reject;
 };
 
@@ -150,7 +143,7 @@ template bgp bgp_icvpn {
 ###################
 
 template bgp bgp_ffrhein {
-	table peering_ffrhein;
+	table peering;
 	local as 201173;
 	import all;
 	export where is_self_public();
