Revert "route public v4 over rip"
This reverts commit da96e2deb6371fcdda1d3d916b30d731c161a95f.

--- a/bird.conf
+++ b/bird.conf
@@ -19,14 +19,13 @@ define KERNEL_TABLE = ipt_freifunk;
 # filter helpers
 #################
 
-function is_default()        { return net ~ [ 0.0.0.0/0         ]; }
-function is_freifunk()       { return net ~ [ 10.0.0.0/8+       ]; }
-function is_dn42()           { return net ~ [ 172.22.0.0/15+    ]; }
-function is_chaosvpn()       { return net ~ [ 172.31.0.0/16+    ]; }
-function is_self_net()       { return net ~ [ 10.130.0.0/16+    ]; }
-function is_self_mesh()      { return net ~ [ 10.130.0.0/20+    ]; }
-function is_self_clientvpn() { return net ~ [ 10.130.16.0/24+   ]; }
-function is_self_public()    { return net ~ [ 185.66.193.32/29+ ]; }
+function is_default()        { return net ~ [ 0.0.0.0/0       ]; }
+function is_freifunk()       { return net ~ [ 10.0.0.0/8+     ]; }
+function is_dn42()           { return net ~ [ 172.22.0.0/15+  ]; }
+function is_chaosvpn()       { return net ~ [ 172.31.0.0/16+  ]; }
+function is_self_net()       { return net ~ [ 10.130.0.0/16+  ]; }
+function is_self_mesh()      { return net ~ [ 10.130.0.0/20+  ]; }
+function is_self_clientvpn() { return net ~ [ 10.130.16.0/24+ ]; }
 
 # static routes
 ################
@@ -46,7 +45,7 @@ protocol static local_mesh {
 protocol rip rip_mesh {
 	interface "freifunk-hl";
 	preference 10;
-	import where (is_self_net() || is_self_public()) && (rip_metric < 16);
+	import where is_self_net() && (rip_metric < 16);
 	export where !is_default() && !((OWNAS, 1) ~ bgp_community);
 };
 
@@ -58,9 +57,8 @@ protocol kernel {
 	device routes;
 	import none;
 	export filter {
-		if is_dn42()        then { krt_prefsrc = OWNIP; accept ; }
-		if is_freifunk()    then { krt_prefsrc = OWNIP; accept ; }
-		if is_self_public() then accept;
+		if is_dn42()     then { krt_prefsrc = OWNIP; accept ; }
+		if is_freifunk() then { krt_prefsrc = OWNIP; accept ; }
 		reject;
 	};
 };
@@ -72,10 +70,9 @@ protocol kernel {
 	device routes;
 	import none;
 	export filter {
-		if is_default()     then { krt_prefsrc = OWNIP_PUBLIC; accept; }
-		if is_dn42()        then { krt_prefsrc = OWNIP; accept ; }
-		if is_freifunk()    then { krt_prefsrc = OWNIP; accept ; }
-		if is_self_public() then accept;
+		if is_default()  then { krt_prefsrc = OWNIP_PUBLIC; accept; }
+		if is_dn42()     then { krt_prefsrc = OWNIP; accept ; }
+		if is_freifunk() then { krt_prefsrc = OWNIP; accept ; }
 		reject;
 	};
 }
@@ -146,7 +143,7 @@ template bgp bgp_ffrhein {
 	table peering;
 	local as 201173;
 	import all;
-	export where is_self_public();
+	export where net ~ [185.66.193.32/29+];
 	next hop self;
 }
 
