bird4: export default route to ipt_freifunk

--- a/bird.conf
+++ b/bird.conf
@@ -70,7 +70,7 @@ protocol kernel {
 	device routes;
 	import none;
 	export filter {
-		if is_default()  then { krt_prefsrc = OWNIP_PUBLIC; accept; }
+		if is_default()  then accept;
 		if is_dn42()     then { krt_prefsrc = OWNIP; accept ; }
 		if is_freifunk() then { krt_prefsrc = OWNIP; accept ; }
 		reject;
