bird4: export default route over rip

--- a/bird.conf
+++ b/bird.conf
@@ -46,7 +46,7 @@ protocol rip rip_mesh {
 	interface "freifunk-hl";
 	preference 10;
 	import where is_self_net() && (rip_metric < 16);
-	export where !is_default() && !((OWNAS, 1) ~ bgp_community);
+	export where !((OWNAS, 1) ~ bgp_community);
 };
 
 # Kernel routing tables
