bird4: do not export default route over ibgp

--- a/bird.conf
+++ b/bird.conf
@@ -119,8 +119,9 @@ template bgp bgp_ibgp {
 	next hop self;
 	import all;
 	export filter { bgp_community.add((OWNAS, 1));
-		              if source = RTS_BGP then accept;
-		              reject;
+	                if is_default() then reject;
+	                if source = RTS_BGP then accept;
+	                reject;
 	              };
 }
 
