bird4: ospf between gateways

--- a/bird.conf
+++ b/bird.conf
@@ -49,6 +49,28 @@ protocol rip rip_mesh {
 	export where !((OWNAS, 1) ~ bgp_community);
 };
 
+# OSPF between gateways
+########################
+
+protocol ospf ospf_mesh {
+	export where !((OWNAS, 1) ~ bgp_community);
+	import where is_default() || is_self_net();
+	area 0 {
+		interface "freifunk-hl" {
+			authentication cryptographic;
+			include "password.conf";
+			type nonbroadcast;
+			neighbors {
+				10.130.8.1  eligible; # huextertor
+				10.130.10.1 eligible; # muehlentor
+				10.130.12.1 eligible; # holstentor
+				10.130.14.1 eligible; # burgtor
+			};
+			priority 0;
+		};
+	};
+};
+
 # Kernel routing tables
 ########################
 
