Revert "bird4: import default route from rip"
This reverts commit 83bcf17c5b869cfe2a096f24b438be2d66c6667a.

--- a/bird.conf
+++ b/bird.conf
@@ -45,7 +45,7 @@ protocol static local_mesh {
 protocol rip rip_mesh {
 	interface "freifunk-hl";
 	preference 10;
-	import where (is_default() || is_self_net()) && (rip_metric < 16);
+	import where is_self_net() && (rip_metric < 16);
 	export where !((OWNAS, 1) ~ bgp_community);
 };
 
