bird4: only import 10.130.64.0/18+ from rip

--- a/bird.conf
+++ b/bird.conf
@@ -26,6 +26,7 @@ function is_chaosvpn()       { return net ~ [ 172.31.0.0/16+  ]; }
 function is_self_net()       { return net ~ [ 10.130.0.0/16+  ]; }
 function is_self_mesh()      { return net ~ [ 10.130.0.0/20+  ]; }
 function is_self_clientvpn() { return net ~ [ 10.130.16.0/24+ ]; }
+function is_self_private()   { return net ~ [ 10.130.64.0/18+ ]; }
 
 # static routes
 ################
@@ -44,8 +45,7 @@ protocol static local_mesh {
 
 protocol rip rip_mesh {
 	interface "freifunk-hl";
-	preference 10;
-	import where is_self_net() && (rip_metric < 16);
+	import where is_self_private() && (rip_metric < 16);
 	export where !((OWNAS, 1) ~ bgp_community);
 };
 
