bird4: reduce preference of ospf_mesh

--- a/bird.conf
+++ b/bird.conf
@@ -53,6 +53,7 @@ protocol rip rip_mesh {
 ########################
 
 protocol ospf ospf_mesh {
+	preference 90;
 	export where !((OWNAS, 1) ~ bgp_community);
 	import where is_default() || is_self_net();
 	area 0 {
