--- a/burgtor/bird6_aux.conf
+++ b/burgtor/bird6_aux.conf
@@ -9,12 +9,11 @@ protocol static static_464xlat {
 ######################
 
 function is_self_clientvpn() {
-  return net ~ [fdef:ffc0:3dd7:10::/64+, 2001:bf7:110:10::/64+, 2001:67c:2d50:10::/64+];
+  return net ~ [fdef:ffc0:3dd7:10::/64+, 2001:67c:2d50:10::/64+];
 }
 
 protocol static local_clientvpn {
   route fdef:ffc0:3dd7:10::/64 via "freifunk-client";
-  route 2001:bf7:110:10::/64 via "freifunk-client";
   route 2001:67c:2d50:10::/64 via "freifunk-client";
 }
 
