renumber to AS201173

--- a/bird6.conf
+++ b/bird6.conf
@@ -13,8 +13,7 @@ include "bird6_host.conf";
 # constants
 ############
 
-define OWNAS        = 65052;
-define OWNAS_PUBLIC = 201173;
+define OWNAS        = 201173;
 define KERNEL_TABLE = ipt_freifunk;
 
 # filter helpers
@@ -136,7 +135,7 @@ template bgp bgp_icvpn {
 
 template bgp bgp_public {
   table peering;
-  local as OWNAS_PUBLIC;
+  local as OWNAS;
   import where !is_self_net() && is_global();
   export where is_self_public();
   next hop self;
