--- a/bird6.conf
+++ b/bird6.conf
@@ -14,6 +14,7 @@ include "bird6_host.conf";
 ############
 
 define OWNAS        = 201173;
+define OWNMAGIC     = 42;
 define KERNEL_TABLE = ipt_freifunk;
 
 # filter helpers
@@ -52,7 +53,7 @@ protocol rip rip_mesh {
   interface "freifunk-hl";
   preference 10;
   import where is_self_net() && (rip_metric < 16);
-  export where is_self_net() || is_default() || (!((OWNAS, 1) ~ bgp_community) && is_ula());
+  export where is_self_net() || is_default() || (!((OWNMAGIC, 1) ~ bgp_community) && is_ula());
 }
 
 # Kernel routing tables
@@ -111,7 +112,7 @@ template bgp bgp_ibgp {
   gateway direct;
   next hop self;
   import all;
-  export filter { bgp_community.add((OWNAS, 1));
+  export filter { bgp_community.add((OWNMAGIC, 1));
                   if source = RTS_BGP then accept;
                   reject;
                 };
