fix ibgp/rip for bird4

--- a/bird.conf
+++ b/bird.conf
@@ -14,6 +14,7 @@ include "bird_host.conf";
 ############
 
 define OWNAS = 201173;
+define OWNMAGIC = 42;
 define KERNEL_TABLE = ipt_freifunk;
 
 # filter helpers
@@ -46,7 +47,7 @@ protocol static local_mesh {
 protocol rip rip_mesh {
 	interface "freifunk-hl";
 	import where is_self_private() && (rip_metric < 16);
-	export where !((OWNAS, 1) ~ bgp_community);
+	export where !((OWNMAGIC, 1) ~ bgp_community);
 };
 
 # OSPF between gateways
@@ -54,7 +55,7 @@ protocol rip rip_mesh {
 
 protocol ospf ospf_mesh {
 	preference 90;
-	export where !((OWNAS, 1) ~ bgp_community);
+	export where !((OWNMAGIC, 1) ~ bgp_community);
 	import where is_default() || is_self_net();
 	area 0 {
 		interface "freifunk-hl" {
@@ -140,7 +141,7 @@ template bgp bgp_ibgp {
 	gateway direct;
 	next hop self;
 	import all;
-	export filter { bgp_community.add((OWNAS, 1));
+	export filter { bgp_community.add((OWNMAGIC, 1));
 	                if is_default() then reject;
 	                if source = RTS_BGP then accept;
 	                reject;
