deploy nat64 on all gateways

--- a/bird6.conf
+++ b/bird6.conf
@@ -46,6 +46,13 @@ protocol static local_mesh {
   route 2001:67c:2d50::/64 via "freifunk-hl";
 }
 
+# 464XLAT
+##########
+
+protocol static static_464xlat {
+  route 2001:67c:2d50:1::/96 via "nat64";
+}
+
 # Mesh-internal routing
 ########################
 
