--- a/bird.conf
+++ b/bird.conf
@@ -41,6 +41,13 @@ protocol static local_mesh {
 	route 10.130.0.0/20 via "freifunk-hl";
 };
 
+# 464XLAT
+##########
+
+protocol static static_464xlat {
+  route 10.130.64.0/18 via "nat64";
+}
+
 # Mesh-internal routing
 ########################
 
