huextertor: add hideio fallback

--- a/huextertor/bird_aux.conf
+++ b/huextertor/bird_aux.conf
@@ -1,3 +1,8 @@
-protocol static default_route {
+protocol static default_route_ffexit {
 	route 0.0.0.0/0 via "ffexit";
+}
+
+protocol static default_route_hideio {
+	preference 95;
+	route 0.0.0.0/0 via "hideio";
 }
