share dn42 template

--- a/bird.conf
+++ b/bird.conf
@@ -177,4 +177,14 @@ template bgp bgp_ffrhein {
 	next hop self;
 }
 
+# DN42 peerings
+################
+
+template bgp bgp_dn42 {
+	table peering;
+	local as OWNAS;
+	import where is_dn42() || is_chaosvpn();
+	export all;
+};
+
 include "bird_aux.conf";
