--- a/bird6.conf
+++ b/bird6.conf
@@ -149,4 +149,14 @@ template bgp bgp_public {
   next hop self;
 }
 
+# DN42 peerings
+################
+
+template bgp bgp_dn42 {
+  table peering;
+  local as OWNAS;
+  import where is_ula() && !is_self_net();
+  export where !is_default();
+}
+
 include "bird6_aux.conf";
